# NXP_MKL25Z4_CMake_Template_Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug_ozone.jdebug
src/: main.c
